--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   },
   "dependencies": {
     "vue": "^2.2.1",
+    "vue-awesome-swiper": "^2.3.8",
+    "vue-datepicker": "^1.3.0",
     "vue-distpicker": "^1.0.4",
     "vue-echarts-v3": "^1.0.3",
+    "vue-lazyload-img": "^0.1.6",
     "vue-router": "^2.2.0",
+    "vue-waterfall": "^1.0.5",
+    "vue2-timepicker": "^0.1.4",
     "vuex": "^2.2.1",
     "wilddog": "^2.5.2",
     "wildvue": "^1.1.1"
@@ -29,6 +34,7 @@
     "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
@@ -38,7 +44,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.4",
     "eslint": "^3.14.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -71,6 +77,7 @@
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.3",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "sinon": "^1.17.7",
