添加滚动条和懒加载

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue-echarts-v3": "^1.0.3",
     "vue-lazyload-img": "^0.1.6",
     "vue-router": "^2.2.0",
+    "vue-scroller": "^2.1.2",
     "vue-waterfall": "^1.0.5",
+    "vue2-scrollbar": "0.0.1",
     "vue2-timepicker": "^0.1.4",
     "vuex": "^2.2.1",
     "wilddog": "^2.5.2",
@@ -69,6 +71,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
+    "lazy-load-img": "^3.0.3",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
@@ -84,6 +87,7 @@
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
     "vue-echarts": "^2.3.3",
+    "vue-lazy-load-img": "0.0.2",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.1",
