--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "vue": "^2.2.1",
     "vue-awesome-swiper": "^2.3.8",
     "vue-datepicker": "^1.3.0",
     "vue-distpicker": "^1.0.4",
     "vue-echarts-v3": "^1.0.3",
     "vue-lazyload-img": "^0.1.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.2.0",
     "vue-scroller": "^2.1.2",
     "vue-waterfall": "^1.0.5",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "axios": "^0.16.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
